2001-08-04  Johan Dahlin  <zilch.am@home.se>

	* misc/devhelp.vim: Added. Thanks goes to Gert.

2001-08-02  Johan Dahlin  <zilch.am@home.se>

	* configure.in (DEVHELP_VERSION): Bumped version to 0.1.1

2001-08-02  Mikael Hallendal  <micke@codefactory.se>

	* src/bookshelf.c (bookshelf_write_xml): the path should be freed.

2001-08-01  Johan Dahlin  <zilch.am@home.se>

	* ui/devhelp.glade: Remove clist and ctree, but keep scrolled windows.

	* src/ui.c (devhelp_insert_book_node): Added visible check.
	(devhelp_create_ui): Create ctree and clist here instead of in glade.

	* src/bookshelf.h: Fix bookshelf_write_xml.

	* src/bookshelf.c: Added visible here too.
	(bookshelf_write_xml): Remove root from arguments, and add visible check.
	(bookshelf_read_xml): Dito.

	* src/books-dialog.c (books_button_show_clicked_cb): Updated
	(books_button_hide_clicked_cb): Dito.
	(update_clist): Dito.

	* src/book.h: added book_set/is_visible here too.

	* src/book.c: Added visible.
	(book_set_visible): New function.
	(book_is_visible): New function.

	* src/bookshelf.c (bookshelf_write_xml): Use book_get_path to get
	the path.

2001-08-01  Mikael Hallendal  <micke@codefactory.se>

	* src/books-dialog.c 
	(books_button_edit_clicked_cb): free the path.
	(info_button_ok_clicked_cb): free the path.

	* src/book.c (book_get_path): don't return const gchar since it
	has to be freed.

2001-08-01  Johan Dahlin  <zilch.am@home.se>

	* src/ui.c (menu_help_about_activate_cb): Make the copyright
	string translatable.

	* src/install.c (install_insert_book): make it look prettier.
	(install_book): Show mime_type with error messages

	* src/book.c (book_get_path): Use gnome_vfs_uri_to_string instead
	of gnome_vfs_uri_get_path.

2001-08-01  Mikael Hallendal  <micke@codefactory.se>

	* src/install.c (install_insert_book): don't freeze/thaw function
	database since it's not changed between the freeze and the thaw.

	* src/bookshelf.c:
	- cleaned up some code in bookshelf_write_xml and